--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -644,6 +644,8 @@ Resources:
 
             cfn-init --region ${AWS::Region} --stack ${AWS::StackId} --resource OpenViduServer
 
+            export HOME="/root"
+
             # Replace .env variables
             /usr/local/bin/feedGroupVars.sh || { echo "[Openvidu] Parameters incorrect/insufficient"; exit 1; }
 
