Enable google cloud storage uploading for recordings

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -327,6 +327,18 @@
 			<artifactId>openvidu-java-client</artifactId>
 			<version>${version.openvidu.java.client}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>libraries-bom</artifactId>
+			<version>16.1.0</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>1.113.4</version>
+		</dependency>
+
 
 		<!-- Test dependencies -->
 
