Update variables OV-ASG

--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
@@ -110,7 +110,7 @@ OPENVIDU_PRO_CLUSTER_ENVIRONMENT=on_premise
 # Whether to enable or disable autoscaling. With autoscaling the number of Media Nodes will
 # be automatically adjusted according to existing load
 # Values: true | false
-OPENVIDU_PRO_CLUSTER_AUTOSCALING=false
+# OPENVIDU_PRO_CLUSTER_AUTOSCALING=false
 
 # How often the autoscaling algorithm runs, in seconds
 # Type number >= 0
@@ -344,3 +344,9 @@ ELASTICSEARCH_PASSWORD=
 #AWS_STACK_NAME=
 #AWS_CLI_DOCKER_TAG=
 #AWS_VOLUME_SIZE=
+
+# AWS ASG configuration
+# --------------------------
+RM_REDIS_IP=
+RM_REDIS_PORT=
+RM_SQS_QUEUE=
