disallow session creation from public clients

--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -7,10 +7,10 @@
 
 # Domain name. If you do not have one, the public IP of the machine.
 # For example: 198.51.100.1, or openvidu.example.com
-DOMAIN_OR_PUBLIC_IP=
+DOMAIN_OR_PUBLIC_IP=psdev4.superkinglabs.com
 
 # OpenVidu SECRET used for apps to connect to OpenVidu server and users to access to OpenVidu Dashboard
-OPENVIDU_SECRET=
+OPENVIDU_SECRET=MY_SECRET11
 
 # Certificate type:
 # - selfsigned:  Self signed certificate. Not recommended for production use.
@@ -21,10 +21,10 @@ OPENVIDU_SECRET=
 # - letsencrypt: Generate a new certificate using letsencrypt. Please set the
 #                required contact email for Let's Encrypt in LETSENCRYPT_EMAIL
 #                variable.
-CERTIFICATE_TYPE=selfsigned
+CERTIFICATE_TYPE=letsencrypt
 
 # If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for notifications
-LETSENCRYPT_EMAIL=user@example.com
+LETSENCRYPT_EMAIL=ajaykumar@gameberrylabs.com
 
 # Proxy configuration
 # If you want to change the ports on which openvidu listens, uncomment the following lines
@@ -37,7 +37,7 @@ LETSENCRYPT_EMAIL=user@example.com
 
 # Changes the port of all services exposed by OpenVidu.
 # SDKs, REST clients and browsers will have to connect to this port
-# HTTPS_PORT=443
+HTTPS_PORT=4443
 
 # Old paths are considered now deprecated, but still supported by default. 
 # OpenVidu Server will log a WARN message every time a deprecated path is called, indicating 
@@ -125,15 +125,6 @@ OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
 # Minimum video bandwidth sent from OpenVidu Server to clients, in kbps.
 # 0 means unconstrained
 OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
-
-# All sessions of OpenVidu will try to force this codec. If OPENVIDU_STREAMS_ALLOW_TRANSCODING=true
-# when a codec can not be forced, transcoding will be allowed
-# Default value is VP8
-# OPENVIDU_STREAMS_FORCED_VIDEO_CODEC=VP8
-
-# Allow transcoding if codec specified in OPENVIDU_STREAMS_FORCED_VIDEO_CODEC can not be applied
-# Default value is false
-# OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
 
 # true to enable OpenVidu Webhook service. false' otherwise
 # Values: true | false
