Restart policy of replication-manager set to always

--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
@@ -56,7 +56,7 @@ services:
 
     replication-manager:
         image: openvidu/replication-manager:1.0.0-dev5
-        restart: on-failure
+        restart: always
         network_mode: host
         environment:
             - SERVER_PORT=4443
