--- a/openvidu-server/deployments/pro/docker-compose/media-node/beats/metricbeat-elasticsearch.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/beats/metricbeat-elasticsearch.yml
@@ -2,7 +2,7 @@ metricbeat.modules:
   - module: system
     metricsets:
       - cpu
-        #- diskio
+      - diskio
       - memory
       - network
       - filesystem
