--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/metricbeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/metricbeat.yml
@@ -1,35 +1,49 @@
 metricbeat.modules:
-- module: nginx
-  metricsets: ["stubstatus"]
-  enabled: true
-  period: 10s
-  hosts: ["http://127.0.0.1"]
-  server_status_path: "nginx_status"
-- module: system
-  metricsets:
-    - cpu
-    - diskio
-    - memory
-    - network
-    - filesystem
-    - fsstat
-    - process_summary
-    - uptime
-  filesystem.ignore_types: [nfs, smbfs, autofs, devtmpfs, devpts, hugetlbfs, tmpfs, sysfs, securityfs, cgroup2, cgroup, pstore, debugfs, configfs, fusectl, proc, fuse.lxcfs, squashfs]
-  processes: ['.*']
-  processors:
-    - drop_event:
-          when:
-            or:
-              - regexp:
-                    system.network.name: '^(veth|lo|docker|br-)($|)'
-              - regexp:
-                    system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host)($|/)'
-              - regexp:
-                    system.filesystem.mount_point: '^/hostfs/(sys|cgroup|proc|dev|etc|host)($|/)'
-  enabled: true
-  period: ${OPENVIDU_PRO_STATS_MONITORING_INTERVAL}s
-  cpu.metrics: [normalized_percentages]
+  - module: docker
+    metricsets:
+      - "container"
+      - "cpu"
+      - "diskio"
+      - "event"
+      - "healthcheck"
+      - "info"
+      - "image"
+      - "memory"
+      - "network"
+    hosts: ["unix:///var/run/docker.sock"]
+    period: ${OPENVIDU_PRO_STATS_MONITORING_INTERVAL}s
+    enabled: true
+  - module: nginx
+    metricsets: ["stubstatus"]
+    enabled: true
+    period: ${OPENVIDU_PRO_STATS_MONITORING_INTERVAL}s
+    hosts: ["http://127.0.0.1"]
+    server_status_path: "nginx_status"
+  - module: system
+    metricsets:
+      - cpu
+      - diskio
+      - memory
+      - network
+      - filesystem
+      - fsstat
+      - process_summary
+      - uptime
+    filesystem.ignore_types: [nfs, smbfs, autofs, devtmpfs, devpts, hugetlbfs, tmpfs, sysfs, securityfs, cgroup2, cgroup, pstore, debugfs, configfs, fusectl, proc, fuse.lxcfs, squashfs]
+    processes: ['.*']
+    processors:
+      - drop_event:
+            when:
+              or:
+                - regexp:
+                      system.network.name: '^(veth|lo|docker|br-)($|)'
+                - regexp:
+                      system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host)($|/)'
+                - regexp:
+                      system.filesystem.mount_point: '^/hostfs/(sys|cgroup|proc|dev|etc|host)($|/)'
+    enabled: true
+    period: ${OPENVIDU_PRO_STATS_MONITORING_INTERVAL}s
+    cpu.metrics: [normalized_percentages]
 output:
   elasticsearch:
     hosts: ["${OPENVIDU_PRO_ELASTICSEARCH_HOST}"]
