--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/filebeat.yml
@@ -28,6 +28,7 @@ processors:
   - add_fields:
       fields:
         cluster-id: ${OPENVIDU_PRO_CLUSTER_ID:undefined}
+        cluster-role: openvidu-server-pro
 
 output:
   elasticsearch:
