--- a/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
@@ -12,6 +12,7 @@ filebeat.inputs:
       kurento-media-server: true
       ip: ${MEDIA_NODE_IP}
       cluster-id: ${CLUSTER_ID}
+      cluster-role: media-node
     fields_under_root: true
 
 processors:
