deployment: Typo nginx

--- a/openvidu-server/docker/openvidu-proxy/nginx.conf
+++ b/openvidu-server/docker/openvidu-proxy/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     server_tokens off;
 
-    client_max_body_size {client_max_body_size}
+    client_max_body_size {client_max_body_size};
 
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/vhost.d/*.conf;
