deployment: Updated openvidu pro beats custom fields. Don't add docker metrics

--- a/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
@@ -11,8 +11,8 @@ filebeat.inputs:
     fields:
       kurento-media-server: true
       ip: ${MEDIA_NODE_IP}
-      cluster-id: ${CLUSTER_ID}
-      cluster-role: media-node
+      cluster_id: ${CLUSTER_ID}
+      cluster_role: medianode
     fields_under_root: true
 
 processors:
