--- a/openvidu-server/deployments/pro/docker-compose/media-node/beats/metricbeat-elasticsearch.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/beats/metricbeat-elasticsearch.yml
@@ -1,18 +1,4 @@
 metricbeat.modules:
-  - module: docker
-    metricsets:
-      - "container"
-      - "cpu"
-      - "diskio"
-      - "event"
-      - "healthcheck"
-      - "info"
-      - "image"
-      - "memory"
-      - "network"
-    hosts: ["unix:///var/run/docker.sock"]
-    period: ${OPENVIDU_PRO_CLUSTER_LOAD_INTERVAL}0s
-    enabled: true
   - module: system
     metricsets:
       - cpu
@@ -42,7 +28,7 @@ metricbeat.modules:
     enabled: true
     period: ${OPENVIDU_PRO_CLUSTER_LOAD_INTERVAL}0s
     cpu.metrics: [normalized_percentages]
-fields: {ip: "${MEDIA_NODE_IP}", cluster-id: "${CLUSTER_ID}", cluster-role: media-node}
+fields: {ip: "${MEDIA_NODE_IP}", cluster_id: "${CLUSTER_ID}", cluster_role: medianode}
 pipeline:
   queue.mem.events: 0
 setup.ilm.enabled: false
