--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/beats/filebeat.yml
@@ -27,7 +27,8 @@ processors:
             container.image.name: docker.elastic.co/beats/metricbeat-oss
   - add_fields:
       fields:
-        cluster-id: ${OPENVIDU_PRO_CLUSTER_ID:undefined}
+        cluster_id: ${OPENVIDU_PRO_CLUSTER_ID:${DOMAIN_OR_PUBLIC_IP}}
+        cluster_role: masternode
 
 output:
   elasticsearch:
