Send metrics with cluster id undefined if OPENVIDU_PRO_CLUSTER_ID and DOMAIN_OR_PUBLIC_IP are not defined

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/filebeat.yml
@@ -27,7 +27,7 @@ processors:
             container.image.name: docker.elastic.co/beats/metricbeat-oss
   - add_fields:
       fields:
-        cluster_id: ${OPENVIDU_PRO_CLUSTER_ID:${DOMAIN_OR_PUBLIC_IP}}
+        cluster_id: ${OPENVIDU_PRO_CLUSTER_ID:${DOMAIN_OR_PUBLIC_IP:undefined}}
         cluster_role: masternode
 
 output:
