--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/beats/filebeat.yml
@@ -28,7 +28,7 @@ processors:
   - add_fields:
       fields:
         cluster_id: ${OPENVIDU_PRO_CLUSTER_ID:${DOMAIN_OR_PUBLIC_IP}}
-        cluster_role: masternode
+        node_role: masternode
 
 output:
   elasticsearch:
