deployment: Add node_id in metricbeat to identify cluster nodes

--- a/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
@@ -12,6 +12,7 @@ filebeat.inputs:
       kurento-media-server: true
       ip: ${MEDIA_NODE_IP}
       cluster_id: ${CLUSTER_ID}
+      node_id: ${NODE_ID}
       node_role: medianode
     fields_under_root: true
 
