deployment: Add node_id to master beats

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -337,6 +337,7 @@ ELASTICSEARCH_PASSWORD=
 #AWS_DEFAULT_REGION=
 #AWS_IMAGE_ID=
 #AWS_INSTANCE_TYPE=
+#AWS_INSTANCE_ID=
 #AWS_KEY_NAME=
 #AWS_SUBNET_ID=
 #AWS_SECURITY_GROUP=
