deployment: Drop openvidu logs from filebeat (sent via logback by openvidu) and change OPENVIDU_PRO_CLUSTER_LOAD_INTERVAL by OPENVIDU_PRO_STATS_MONITORING_INTERVAL in media nodes metricbeat

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/beats/filebeat.yml
@@ -25,6 +25,8 @@ processors:
             container.image.name: docker.elastic.co/beats/filebeat-oss
         - contains:
             container.image.name: docker.elastic.co/beats/metricbeat-oss
+        - contains:
+            container.image.name: openvidu/openvidu-server-pro
   - add_fields:
       fields:
         cluster_id: ${OPENVIDU_PRO_CLUSTER_ID:${DOMAIN_OR_PUBLIC_IP:undefined}}
