--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -11,7 +11,7 @@
 #
 #    This file will be overridden when update OpenVidu Platform
 #
-#    Openvidu Version: 2.16.0
+#    Openvidu Version: 2.17.0-beta2
 #
 #    Installation Mode: On Premises
 #
@@ -22,7 +22,7 @@ version: '3.1'
 services:
 
     openvidu-server:
-        image: openvidu/openvidu-server-pro:2.17.0-dev5
+        image: openvidu/openvidu-server-pro:2.17.0-beta2
         restart: on-failure
         network_mode: host
         entrypoint: ['/usr/local/bin/entrypoint.sh']
@@ -52,7 +52,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     redis:
-        image: openvidu/openvidu-redis:2.0.0-dev2
+        image: openvidu/openvidu-redis:2.0.0-beta1
         restart: always
         network_mode: host
         environment:
@@ -62,7 +62,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:3.0.0-dev2
+        image: openvidu/openvidu-coturn:3.0.0-beta1
         restart: on-failure
         network_mode: host
         environment:
@@ -79,7 +79,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     nginx:
-        image: openvidu/openvidu-proxy:5.0.0-dev3
+        image: openvidu/openvidu-proxy:5.0.0-beta1
         restart: on-failure
         network_mode: host
         volumes:
