--- a/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
@@ -6,7 +6,7 @@
 #
 #    This docker-compose file coordinates all services of OpenVidu CE Platform.
 #
-#    Openvidu Version: 2.16.0
+#    Openvidu Version: 2.17.0-beta3
 #
 #    Installation Mode: On Premises
 #
@@ -16,13 +16,13 @@ version: '3.1'
 
 services:
     media-node-controller:
-        image: openvidu/media-node-controller:3.0.0-dev5
+        image: openvidu/media-node-controller:3.0.0-beta2
         restart: always
         ulimits:
             core: -1
         entrypoint: ['/bin/sh', '-c', '/beats/copy_config_files.sh && /usr/local/bin/entrypoint.sh']
         environment:
-            - KMS_IMAGE=kurento/kurento-media-server:6.15.0
+            - KMS_IMAGE=kurento/kurento-media-server-exp:fix-opusdec
             - METRICBEAT_IMAGE=docker.elastic.co/beats/metricbeat-oss:7.8.0
             - FILEBEAT_IMAGE=docker.elastic.co/beats/filebeat-oss:7.8.0
             - OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:2.17.0-beta2
