deployment: Fix error after on changing ELASTICSEARCH_PASSWORD

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -120,6 +120,7 @@ services:
         command: > 
             /bin/bash -c "elasticsearch-users useradd ${ELASTICSEARCH_USERNAME} 
             -p ${ELASTICSEARCH_PASSWORD} -r superuser;
+            elasticsearch-users passwd ${ELASTICSEARCH_USERNAME} -p ${ELASTICSEARCH_PASSWORD};
             docker-entrypoint.sh"
         logging:
             options:
