deployment: Export elasticsearch at /openvidu/elasticsearch

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
@@ -25,3 +25,19 @@
         rewrite ^/kibana/(.*)$ /$1 break;
         proxy_pass http://kibana/;
     }
+
+    location ~ ^/openvidu/elasticsearch$ {
+        {rules_access_dashboard}
+        deny all;
+
+        rewrite ^/openvidu/elasticsearch(.*)$ $1 break;
+        proxy_pass http://elasticsearch;
+    }
+
+    location /openvidu/elasticsearch/ {
+        {rules_access_dashboard}
+        deny all;
+
+        rewrite ^/openvidu/elasticsearch/(.*)$ /$1 break;
+        proxy_pass http://elasticsearch;
+    }
