--- a/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             - KMS_IMAGE=kurento/kurento-media-server:6.15.0
             - METRICBEAT_IMAGE=docker.elastic.co/beats/metricbeat-oss:7.8.0
             - FILEBEAT_IMAGE=docker.elastic.co/beats/filebeat-oss:7.8.0
-            - OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:2.17.0-beta2
+            - OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:2.17.0
             - NO_COLOR=true
         ports:
             - 3000:3000
