openvidu-java-client: update javadoc plugin

--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -138,6 +138,7 @@
 						<version>${version.javadoc.plugin}</version>
 						<configuration>
 							<show>public</show>
+							<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
 						</configuration>
 						<executions>
 							<execution>
