--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -11,7 +11,7 @@
 #
 #    This file will be overridden when update OpenVidu Platform
 #
-#    Openvidu Version: 2.16.0
+#    Openvidu Version: 2.17.0
 #
 #    Installation Mode: On Premises
 #
@@ -22,7 +22,7 @@ version: '3.1'
 services:
 
     openvidu-server:
-        image: openvidu/openvidu-server:2.17.0-dev3
+        image: openvidu/openvidu-server:2.17.0
         restart: on-failure
         network_mode: host
         entrypoint: ['/usr/local/bin/entrypoint.sh']
@@ -65,7 +65,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     redis:
-        image: openvidu/openvidu-redis:2.0.0-dev2
+        image: openvidu/openvidu-redis:2.0.0
         restart: always
         network_mode: host
         environment:
@@ -75,7 +75,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:3.0.0-dev2
+        image: openvidu/openvidu-coturn:3.0.0
         restart: on-failure
         network_mode: host
         environment:
@@ -91,7 +91,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     nginx:
-        image: openvidu/openvidu-proxy:5.0.0-dev4
+        image: openvidu/openvidu-proxy:5.0.0
         restart: on-failure
         network_mode: host
         volumes:
