openvidu-pro: Adapt openvidu-browser and openvidu-server ce to send browser logs related with openvidu-browser in OpenVidu Pro

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.ssl.key-store=classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password=openvidu
 server.ssl.key-store-type=JKS
 server.ssl.key-alias=openvidu-selfsigned
+server.servlet.session.cookie.name=OVJSESSIONID
 
 logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
