deployment: Add OPENVIDU_BROWSER_LOGS parameter to .env

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -250,6 +250,10 @@ OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 # Default value is false
 # OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
 
+# Send openvidu-browser logs of clients to Elasticsearch
+# Default value is 'disabled'
+# OPENVIDU_BROWSER_LOGS=disabled
+
 # true to enable OpenVidu Webhook service. false' otherwise
 # Values: true | false
 OPENVIDU_WEBHOOK=false
