deployment: Update aws-asg master files

--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
@@ -110,7 +110,7 @@ OPENVIDU_PRO_CLUSTER_ENVIRONMENT=on_premise
 # Whether to enable or disable autoscaling. With autoscaling the number of Media Nodes will
 # be automatically adjusted according to existing load
 # Values: true | false
-# OPENVIDU_PRO_CLUSTER_AUTOSCALING=false
+OPENVIDU_PRO_CLUSTER_AUTOSCALING=false
 
 # How often the autoscaling algorithm runs, in seconds
 # Type number >= 0
@@ -188,7 +188,7 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # AWS region in which the S3 bucket is located (e.g. eu-west-1). If not provided, 
 # the region will try to be discovered automatically, although this is not always possible. 
 # This property is only taken into account if OPENVIDU_PRO_RECORDING_STORAGE=s3
-# OPENVIDU_PRO_AWS_REGION=
+#OPENVIDU_PRO_AWS_REGION=
 
 # Whether to enable recording module or not
 OPENVIDU_RECORDING=false
@@ -249,6 +249,10 @@ OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 # Allow transcoding if codec specified in OPENVIDU_STREAMS_FORCED_VIDEO_CODEC can not be applied
 # Default value is false
 # OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
+
+# Send openvidu-browser logs of clients to Elasticsearch
+# Default value is 'disabled'
+# OPENVIDU_BROWSER_LOGS=disabled
 
 # true to enable OpenVidu Webhook service. false' otherwise
 # Values: true | false
@@ -337,6 +341,7 @@ ELASTICSEARCH_PASSWORD=
 #AWS_DEFAULT_REGION=
 #AWS_IMAGE_ID=
 #AWS_INSTANCE_TYPE=
+#AWS_INSTANCE_ID=
 #AWS_KEY_NAME=
 #AWS_SUBNET_ID=
 #AWS_SECURITY_GROUP=
