--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
@@ -66,7 +66,7 @@ services:
             - REDIS_HOST=${RM_REDIS_IP}
             - REDIS_PORT=${RM_REDIS_PORT}
             - REDIS_PASS=${OPENVIDU_SECRET}
-            - STACK_ARN=${RM_CLOUDFORMATION_ARN}
+            - RM_CLOUDFORMATION_ARN=${RM_CLOUDFORMATION_ARN}
             - REDIS_TIMEOUT=5
             - REDIS_DB=replicationmanager
             - MEDIANODE_AS_NOTIFICATION_QUEUE=${RM_SQS_QUEUE}
