--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
@@ -267,7 +267,7 @@ OPENVIDU_WEBHOOK=false
 
 # List of events that will be sent by OpenVidu Webhook service
 # Default value is all available events
-OPENVIDU_WEBHOOK_EVENTS=[sessionCreated,sessionDestroyed,participantJoined,participantLeft,webrtcConnectionCreated,webrtcConnectionDestroyed,recordingStatusChanged,filterEventDispatched,mediaNodeStatusChanged]
+OPENVIDU_WEBHOOK_EVENTS=[sessionCreated,sessionDestroyed,participantJoined,participantLeft,webrtcConnectionCreated,webrtcConnectionDestroyed,recordingStatusChanged,filterEventDispatched,mediaNodeStatusChanged,nodeCrashed]
 
 # How often the garbage collector of non active sessions runs.
 # This helps cleaning up sessions that have been initialized through
