--- a/openvidu-server/src/test/resources/integration-test.properties
+++ b/openvidu-server/src/test/resources/integration-test.properties
@@ -21,7 +21,7 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 OPENVIDU_WEBHOOK=false
 OPENVIDU_WEBHOOK_ENDPOINT=
 OPENVIDU_WEBHOOK_HEADERS=[]
-OPENVIDU_WEBHOOK_EVENTS=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged","filterEventDispatched","mediaNodeStatusChanged"]
+OPENVIDU_WEBHOOK_EVENTS=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged","filterEventDispatched","mediaNodeStatusChanged","nodeCrashed"]
 
 OPENVIDU_RECORDING=false
 OPENVIDU_RECORDING_VERSION=2.17.0
