--- a/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
+++ b/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
@@ -94,7 +94,7 @@ Resources:
                 # Openvidu recording
                 docker pull openvidu/openvidu-recording:OPENVIDU_RECORDING_DOCKER_TAG
 
-                # Openvidu CE images
+                # OpenVidu CE images
                 cd /opt/openvidu
                 docker-compose pull
               mode: "000755"
@@ -119,11 +119,11 @@ Resources:
 
             cfn-init --region ${AWS::Region} --stack ${AWS::StackId} --resource OpenviduServerCE
 
-            /usr/local/bin/installDockerAndDockerCompose.sh || { echo "[Openvidu] error installing docker and compose"; exit 1; }
+            /usr/local/bin/installDockerAndDockerCompose.sh || { echo "[OpenVidu] error installing docker and compose"; exit 1; }
 
-            /usr/local/bin/installOpenviduCE.sh || { echo "[Openvidu] error installing Openvidu CE"; exit 1; }
+            /usr/local/bin/installOpenviduCE.sh || { echo "[OpenVidu] error installing OpenVidu CE"; exit 1; }
 
-            /usr/local/bin/getDockerImages.sh || { echo "[Openvidu] error getting docker images"; exit 1; }
+            /usr/local/bin/getDockerImages.sh || { echo "[OpenVidu] error getting docker images"; exit 1; }
 
             # sending the finish call
             /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource WaitCondition --region ${AWS::Region}
