--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -9,7 +9,7 @@
 # For example: 198.51.100.1, or openvidu.example.com
 DOMAIN_OR_PUBLIC_IP=
 
-# OpenVidu PRO License
+# OpenVidu Pro License
 OPENVIDU_PRO_LICENSE=
 
 # OpenVidu SECRET used for apps to connect to OpenVidu server and users to access to OpenVidu Dashboard
@@ -42,9 +42,9 @@ LETSENCRYPT_EMAIL=user@example.com
 # SDKs, REST clients and browsers will have to connect to this port
 # HTTPS_PORT=443
 
-# Old paths are considered now deprecated, but still supported by default. 
-# OpenVidu Server will log a WARN message every time a deprecated path is called, indicating 
-# the new path that should be used instead. You can set property SUPPORT_DEPRECATED_API=false 
+# Old paths are considered now deprecated, but still supported by default.
+# OpenVidu Server will log a WARN message every time a deprecated path is called, indicating
+# the new path that should be used instead. You can set property SUPPORT_DEPRECATED_API=false
 # to stop allowing the use of old paths.
 # Default value is true
 # SUPPORT_DEPRECATED_API=true
@@ -53,7 +53,7 @@ LETSENCRYPT_EMAIL=user@example.com
 # Default value is false
 # REDIRECT_WWW=false
 
-# How many workers to configure in nginx proxy. 
+# How many workers to configure in nginx proxy.
 # The more workers, the more requests will be handled
 # Default value is 10240
 # WORKER_CONNECTIONS=10240
@@ -88,7 +88,7 @@ OPENVIDU_PRO_CLUSTER_MODE=manual
 OPENVIDU_PRO_CLUSTER_ENVIRONMENT=on_premise
 
 # Unique identifier of your cluster. Each OpenVidu Server Pro instance corresponds to one cluster.
-# You can launch as many clusters as you want with your license key. 
+# You can launch as many clusters as you want with your license key.
 # Cluster ID will always be stored to disk so restarting OpenVidu Server Pro will keep the same previous cluster ID
 # if this configuration parameter is not given a distinct value.
 # OPENVIDU_PRO_CLUSTER_ID=
@@ -185,8 +185,8 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # and write into the s3 bucket, you don't need this parameter
 # OPENVIDU_PRO_AWS_SECRET_KEY=
 
-# AWS region in which the S3 bucket is located (e.g. eu-west-1). If not provided, 
-# the region will try to be discovered automatically, although this is not always possible. 
+# AWS region in which the S3 bucket is located (e.g. eu-west-1). If not provided,
+# the region will try to be discovered automatically, although this is not always possible.
 # This property is only taken into account if OPENVIDU_PRO_RECORDING_STORAGE=s3
 #OPENVIDU_PRO_AWS_REGION=
 
