--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -693,23 +693,43 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIpv6: ::/0
         - IpProtocol: udp
+          FromPort: 40000
+          ToPort: 65535
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: udp
+          FromPort: 40000
+          ToPort: 65535
+          CidrIpv6: ::/0
+        - IpProtocol: tcp
           FromPort: 40000
           ToPort: 65535
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 40000
           ToPort: 65535
-          CidrIp: 0.0.0.0/0
+          CidrIpv6: ::/0
       SecurityGroupEgress:
         - IpProtocol: tcp
           FromPort: 1
           ToPort: 65535
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 1
+          ToPort: 65535
+          CidrIpv6: ::/0
         - IpProtocol: udp
           FromPort: 1
           ToPort: 65535
           CidrIp: 0.0.0.0/0
+        - IpProtocol: udp
+          FromPort: 1
+          ToPort: 65535
+          CidrIpv6: ::/0
 
   OpenViduSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
@@ -723,38 +743,74 @@ Resources:
           ToPort: 22
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIpv6: ::/0
+        - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIpv6: ::/0
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIpv6: ::/0
+        - IpProtocol: tcp
           FromPort: 3478
           ToPort: 3478
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3478
+          ToPort: 3478
+          CidrIpv6: ::/0
         - IpProtocol: udp
           FromPort: 3478
           ToPort: 3478
           CidrIp: 0.0.0.0/0
         - IpProtocol: udp
+          FromPort: 3478
+          ToPort: 3478
+          CidrIpv6: ::/0
+        - IpProtocol: udp
+          FromPort: 40000
+          ToPort: 65535
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: udp
+          FromPort: 40000
+          ToPort: 65535
+          CidrIpv6: ::/0
+        - IpProtocol: tcp
           FromPort: 40000
           ToPort: 65535
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 40000
           ToPort: 65535
-          CidrIp: 0.0.0.0/0
+          CidrIpv6: ::/0
       SecurityGroupEgress:
         - IpProtocol: tcp
           FromPort: 1
           ToPort: 65535
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 1
+          ToPort: 65535
+          CidrIpv6: ::/0
         - IpProtocol: udp
           FromPort: 1
           ToPort: 65535
           CidrIp: 0.0.0.0/0
+        - IpProtocol: udp
+          FromPort: 1
+          ToPort: 65535
+          CidrIpv6: ::/0
 
   WaitCondition:
     Type: AWS::CloudFormation::WaitCondition
