deployment: Update coturn to 4.5.2 and use official docker image

--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -75,17 +75,22 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:3.0.0
+        image: openvidu/openvidu-coturn:4.0.0-dev1
         restart: on-failure
         network_mode: host
-        environment:
+        environment: 
             - REDIS_IP=127.0.0.1
-            - TURN_LISTEN_PORT=3478
             - DB_NAME=0
             - DB_PASSWORD=${OPENVIDU_SECRET}
-            - MIN_PORT=57001
-            - MAX_PORT=65535
-            - ENABLE_COTURN_LOGS=true
+        command:
+            - --log-file=stdout
+            - --listening-port=3478
+            - --fingerprint
+            - --lt-cred-mech
+            - --min-port=57001
+            - --max-port=65535
+            - --realm=openvidu
+            - --verbose
         logging:
             options:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
