deployment: Minor fix to elasticsearch redirections

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
@@ -14,10 +14,6 @@
         proxy_pass http://openviduserver;
     }
 
-    location ~ /openvidu$ {
-        proxy_pass http://openviduserver;
-    }
-
     location /kibana {
         {rules_access_dashboard}
         deny all;
@@ -27,17 +23,22 @@
     }
 
     location ~ ^/openvidu/elasticsearch$ {
-        {rules_access_dashboard}
+        allow all;
+        deny all;
+        
+        rewrite ^/openvidu/elasticsearch$ / break;
+        proxy_pass http://elasticsearch;
+    }
+
+
+    location ~ ^/openvidu/elasticsearch/.*$ {
+        allow all;
         deny all;
 
         rewrite ^/openvidu/elasticsearch(.*)$ $1 break;
         proxy_pass http://elasticsearch;
     }
 
-    location /openvidu/elasticsearch/ {
-        {rules_access_dashboard}
-        deny all;
-
-        rewrite ^/openvidu/elasticsearch/(.*)$ /$1 break;
-        proxy_pass http://elasticsearch;
+    location ~ /openvidu$ {
+        proxy_pass http://openviduserver;
     }
