deployment: Add rules_access_dashboard to new rules

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/global/pro/common_api_pro.conf
@@ -23,7 +23,7 @@
     }
 
     location ~ ^/openvidu/elasticsearch$ {
-        allow all;
+        {rules_access_dashboard}
         deny all;
         
         rewrite ^/openvidu/elasticsearch$ / break;
@@ -32,7 +32,7 @@
 
 
     location ~ ^/openvidu/elasticsearch/.*$ {
-        allow all;
+        {rules_access_dashboard}
         deny all;
 
         rewrite ^/openvidu/elasticsearch(.*)$ $1 break;
