deployment: Bump nginx to 6.0.0-dev1

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -84,7 +84,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     nginx:
-        image: openvidu/openvidu-proxy:5.0.0
+        image: openvidu/openvidu-proxy:6.0.0-dev1
         restart: on-failure
         network_mode: host
         volumes:
