deployment: Add rule to allow iframe

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -1,4 +1,5 @@
-add_header X-Frame-Options SAMEORIGIN;
+{xframe_options}
+
 add_header X-Content-Type-Options nosniff;
 add_header X-XSS-Protection "1; mode=block";
 
